  * Detect usage of 'Artistic License 2.0' and include the license text in
    debian/copyright; (build-)depend on libsoftware-license-perl.
    (Closes: #589816)
  * Clarify documentation about --cpan argument being module name
    (Closes: 602059)
  * Support distribution names as arguments to --cpan (Closes: #607998)
  * Fix tests to stringify when comparing overloaded objects with strings

 -- Peter Pentchev <roam@ringlet.net>  Sun, 19 Dec 2010 20:43:10 +0200

dh-make-perl (0.70-1) unstable; urgency=low

  [ Salvatore Bonaccorso ]
  * dh --buildsystem=buildsystem needs at least debhelper (>= 7.3.7), add this
    rule to DhMakePerl::Command::Packaging. 
  * Bump versioned Build-Depends on debhelper to (>= 7.3.7) as needed
    for --buildsystem.
  * In v8 mode, dh expects the sequence to run is always its first
    parameter. To be prepared for this, change order of passed arguments
    to the dh commands in debian/rules.
  * Now really bump Standards-Version of dh-make-perl to 3.9.1 in
    debian/control.

  [ Damyan Ivanov ]
  * Packaging.pm: fix a lexical declaration within a conditional statement

 -- Damyan Ivanov <dmn@debian.org>  Wed, 28 Jul 2010 23:54:18 +0300

dh-make-perl (0.69-1) unstable; urgency=low

  [ Damyan Ivanov ]
  * die early if unable to determine distribution name or version.
    Probably Closes: #525847 (already closed due to missing test case)

  [ Ansgar Burchardt ]
  * Do not require --cpan in addition to --pkg-perl when adding Vcs-* fields.
  * Debian::Dependency: Recognize deprecated '<' and '>' relations.
  * Debian::Dependency: Allow architecture restrictions in dependencies.
    For now this information is just ignored.
  * DhMakePerl::Command::Packaging (set_package_name): Use package name
    specified by --packagename option. (Closes: #584619)
  * dh-make-perl: Fix spelling error ("intercepring" → "intercepting").
  * Debian::WNPP::Query: Fix bugs_for_package method.