@@ -1,7 +1,8 @@
 Source: libstrange-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 7), perl
+Build-Depends: debhelper (>= 7),
+ perl
 Maintainer: Joe Maintainer <joemaint@test.local>
 Standards-Version: 3.9.1
 Homepage: http://search.cpan.org/dist/Strange/
