@@ -29,6 +29,8 @@ dh-make-perl (0.71-1) UNRELEASED; urgency=low
     (Closes: 602059)
   * Support distribution names as arguments to --cpan (Closes: #607998)
   * Fix tests to stringify when comparing overloaded objects with strings
+  * Control::Stanza: split dependency lists one package per line in order to
+    make changes more VCS-friendly
 
  -- Peter Pentchev <roam@ringlet.net>  Sun, 19 Dec 2010 20:43:10 +0200
 
